--- a/engine/managed/src/Engine.NativeBindings/Engine.NativeBindings.csproj
+++ b/engine/managed/src/Engine.NativeBindings/Engine.NativeBindings.csproj
@@ -12,6 +12,7 @@
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
 </Project>
