--- a/engine/managed/tests/Engine.Tests/Engine.Tests.csproj
+++ b/engine/managed/tests/Engine.Tests/Engine.Tests.csproj
@@ -25,6 +25,7 @@
     <ProjectReference Include="..\..\src\Engine.Rendering\Engine.Rendering.csproj" />
     <ProjectReference Include="..\..\src\Engine.UI\Engine.UI.csproj" />
     <ProjectReference Include="..\..\src\Engine.App\Engine.App.csproj" />
+    <ProjectReference Include="..\..\src\Engine.Scenes\Engine.Scenes.csproj" />
     <ProjectReference Include="..\..\src\Engine.NativeBindings\Engine.NativeBindings.csproj" />
   </ItemGroup>
 
