Расширен asset pipeline для сцен и префабов
+ Добавлена компиляция scene/prefab JSON в версионированные бинарные форматы через Engine.Scenes
+ Обновлён pak-формат: хранит compiledPath и sizeBytes для каждого ассета
+ assetc build теперь выполняет compile step в папку compiled перед упаковкой
+ Добавлены тесты на успешную компиляцию scene-ассета и валидацию обновлённого пайплайна

--- a/engine/tools/assetc.tests/Assetc.Tests.csproj
+++ b/engine/tools/assetc.tests/Assetc.Tests.csproj
@@ -20,6 +20,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\assetc\Assetc.csproj" />
+    <ProjectReference Include="..\asset-pipeline\Engine.AssetPipeline.csproj" />
+    <ProjectReference Include="..\..\managed\src\Engine.Scenes\Engine.Scenes.csproj" />
   </ItemGroup>
 
 </Project>
