Добавлены каркасы platform и rhi в native
+ Реализованы PlatformState и RhiDevice как базовые runtime-подсистемы
+ RendererState переведён на выполнение BeginFrame/Clear/Present через RHI backend
+ Engine pump events теперь идёт через PlatformState вместо ручных заглушек
+ Добавлены unit tests для platform/rhi и включены в CTest

--- a/engine/native/CMakeLists.txt
+++ b/engine/native/CMakeLists.txt
@@ -7,7 +7,9 @@ add_library(dff_native SHARED
   src/bridge_capi/renderer_capi.cpp
   src/bridge_capi/physics_capi.cpp
   src/core/engine_state.cpp
+  src/platform/platform_state.cpp
   src/render/render_graph.cpp
+  src/rhi/rhi_device.cpp
 )
 
 target_compile_features(dff_native PUBLIC cxx_std_20)
@@ -29,8 +31,12 @@ include(CTest)
 if(BUILD_TESTING)
   add_executable(dff_native_tests
     tests/native_tests.cpp
+    tests/platform/platform_state_tests.cpp
     tests/render/render_graph_tests.cpp
+    tests/rhi/rhi_device_tests.cpp
+    src/platform/platform_state.cpp
     src/render/render_graph.cpp
+    src/rhi/rhi_device.cpp
   )
 
   target_compile_features(dff_native_tests PRIVATE cxx_std_20)
