--- a/engine/managed/src/Engine.UI/Engine.UI.csproj
+++ b/engine/managed/src/Engine.UI/Engine.UI.csproj
@@ -3,6 +3,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Engine.Core\Engine.Core.csproj" />
     <ProjectReference Include="..\Engine.ECS\Engine.ECS.csproj" />
+    <ProjectReference Include="..\Engine.Rendering\Engine.Rendering.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
