Добавлены physics sweep и overlap запросы
+ Добавлено: C ABI и managed API для physics_sweep/physics_overlap с handle-based маршаллингом через NativeRuntime.
+ Улучшено: единая валидация геометрии коллайдеров и query-типов через PhysicsShapeValidation для соблюдения DRY.
+ Добавлено: расширенное покрытие тестами для новых physics query типов, interop маршрута и native happy/invalid сценариев.

--- a/engine/native/CMakeLists.txt
+++ b/engine/native/CMakeLists.txt
@@ -8,6 +8,7 @@ add_library(dff_native SHARED
   src/bridge_capi/physics_capi.cpp
   src/core/engine_state.cpp
   src/core/physics_raycast.cpp
+  src/core/physics_queries.cpp
   src/platform/platform_state.cpp
   src/render/render_graph.cpp
   src/rhi/rhi_device.cpp
