--- a/engine/native/CMakeLists.txt
+++ b/engine/native/CMakeLists.txt
@@ -10,6 +10,7 @@ add_library(dff_native SHARED
   src/core/physics_raycast.cpp
   src/core/physics_queries.cpp
   src/platform/platform_state.cpp
+  src/render/frame_graph_builder.cpp
   src/render/render_graph.cpp
   src/rhi/rhi_device.cpp
 )
@@ -34,9 +35,11 @@ if(BUILD_TESTING)
   add_executable(dff_native_tests
     tests/native_tests.cpp
     tests/platform/platform_state_tests.cpp
+    tests/render/frame_graph_builder_tests.cpp
     tests/render/render_graph_tests.cpp
     tests/rhi/rhi_device_tests.cpp
     src/platform/platform_state.cpp
+    src/render/frame_graph_builder.cpp
     src/render/render_graph.cpp
     src/rhi/rhi_device.cpp
   )
