Шаг 12: bootstrap шаблона и packaging без ручной подготовки
+ Добавлено: ProjectTemplateInitializer и перенос init на копирование templates/game-template с подстановкой имени игры.\n+ Добавлено: runtime bootstrap в шаблоне (Game.Runtime.csproj и Program.cs) с переименованием в <GameName>.Runtime при init.\n+ Исправлено: шаблонный assets/manifest.json приведён к валидному формату (version=1, корректный path).\n+ Добавлено: тесты init/pack для проверки автогенерации runtime проекта и работы pack сразу после init.\n+ Обновлено: документация о готовом runtime проекте после init.

--- a/templates/game-template/assets/manifest.json
+++ b/templates/game-template/assets/manifest.json
@@ -1,7 +1,8 @@
 {
+  "version": 1,
   "assets": [
     {
-      "path": "assets/example.txt",
+      "path": "example.txt",
       "kind": "text"
     }
   ]
