Добавлен foundation для Engine.Content
+ Добавлены базовые контентные контракты: IAssetRecipe/IAssetGenerator, AssetKey/AssetKeyBuilder, DffAssetAttribute и AssetRegistry.

+ Улучшено кэширование: реализованы RuntimeAssetCache (LRU), DevDiskAssetCache и InMemoryAssetsProvider с bake/load/get-or-create API через фасад Assets.

+ Исправлено покрытие качества: добавлен набор Content-тестов и подключён новый проект Engine.Content в решения и Engine.Tests.

--- a/engine/managed/tests/Engine.Tests/Engine.Tests.csproj
+++ b/engine/managed/tests/Engine.Tests/Engine.Tests.csproj
@@ -20,6 +20,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\Engine.Core\Engine.Core.csproj" />
+    <ProjectReference Include="..\..\src\Engine.Content\Engine.Content.csproj" />
     <ProjectReference Include="..\..\src\Engine.ECS\Engine.ECS.csproj" />
     <ProjectReference Include="..\..\src\Engine.Physics\Engine.Physics.csproj" />
     <ProjectReference Include="..\..\src\Engine.Rendering\Engine.Rendering.csproj" />
