--- a/engine/tools/engine-cli/Engine.Cli.csproj
+++ b/engine/tools/engine-cli/Engine.Cli.csproj
@@ -2,6 +2,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\asset-pipeline\Engine.AssetPipeline.csproj" />
+    <ProjectReference Include="..\..\managed\src\Engine.Testing\Engine.Testing.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
