Добавлен C ABI capture и managed биндинги
+ Добавлены capture_request/capture_poll/capture_free_result в native ABI и поднята версия API до 7.
+ Реализован native capture store и bridge C API с валидацией аргументов и освобождением буфера результата.
+ Обновлены C# interop контракты и добавлен NativeRuntime-путь захвата кадра с проверкой целостности payload.
+ Добавлены managed и native тесты для capture-сценариев и обновлена CMake-сборка тестовых целей.

--- a/engine/native/CMakeLists.txt
+++ b/engine/native/CMakeLists.txt
@@ -7,7 +7,9 @@ add_library(dff_native SHARED
   src/bridge_capi/content_capi.cpp
   src/bridge_capi/renderer_capi.cpp
   src/bridge_capi/physics_capi.cpp
+  src/bridge_capi/capture_capi.cpp
   src/content/content_runtime.cpp
+  src/core/capture_store.cpp
   src/core/engine_state.cpp
   src/core/physics_raycast.cpp
   src/core/physics_queries.cpp
@@ -64,4 +66,20 @@ if(BUILD_TESTING)
   target_link_libraries(dff_native_tests PRIVATE dff_native)
 
   add_test(NAME dff_native_tests COMMAND dff_native_tests)
+
+  add_executable(dff_native_capture_tests
+    tests/capture/capture_capi_tests.cpp
+  )
+
+  target_compile_features(dff_native_capture_tests PRIVATE cxx_std_20)
+
+  target_include_directories(dff_native_capture_tests PRIVATE
+    ${CMAKE_CURRENT_SOURCE_DIR}/include
+    ${CMAKE_CURRENT_SOURCE_DIR}/src
+    ${CMAKE_CURRENT_SOURCE_DIR}/tests
+  )
+
+  target_link_libraries(dff_native_capture_tests PRIVATE dff_native)
+
+  add_test(NAME dff_native_capture_tests COMMAND dff_native_capture_tests)
 endif()
