Подключен runtime capture в rendering facade и dff test
+ Расширен IRenderingFacade методом CaptureFrameRgba8 и обновлены Noop/Native реализации, включая test double.
+ Добавлена нормализация stride в NativeRuntime capture-пути для корректного packed RGBA буфера.
+ dff test теперь пишет PNG из реального RGBA буфера через новый RgbaPngCodec и сохраняет raw .rgba8.bin без placeholder PNG.
+ Добавлены/обновлены тесты для capture в Rendering/NativeBindings и проверка PNG-артефактов в CLI-тестах.

--- a/engine/tools/engine-cli/Engine.Cli.csproj
+++ b/engine/tools/engine-cli/Engine.Cli.csproj
@@ -3,6 +3,7 @@
   <ItemGroup>
     <ProjectReference Include="..\asset-pipeline\Engine.AssetPipeline.csproj" />
     <ProjectReference Include="..\..\managed\src\Engine.Testing\Engine.Testing.csproj" />
+    <ProjectReference Include="..\..\managed\src\Engine.Rendering\Engine.Rendering.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
