Перевёл runtime контента на бинарный pak
+ Добавлено: бинарный формат pak v3 с индексом, AssetKey и встроенным payload через PakBinaryCodec.
+ Улучшено: content runtime в native теперь монтирует и читает ассеты напрямую из pak по offset/size без зависимости от compiled.manifest.bin и каталога compiled.
+ Улучшено: compiled manifest расширен до версии 2 (offset + asset key) с обратной совместимостью чтения версии 1.
+ Обновлено: assetc и engine-cli bake сохраняют resolved записи pak в compiled manifest.
+ Добавлено: native модуль pak_index и покрытие тестами для чтения payload из pak.
+ Добавлено: тесты assetc проверяют offset/asset key и соответствие payload в pak содержимому compiled файлов.

--- a/engine/native/CMakeLists.txt
+++ b/engine/native/CMakeLists.txt
@@ -9,6 +9,7 @@ add_library(dff_native SHARED
   src/bridge_capi/physics_capi.cpp
   src/bridge_capi/capture_capi.cpp
   src/content/content_runtime.cpp
+  src/content/pak_index.cpp
   src/core/capture_store.cpp
   src/core/engine_state.cpp
   src/core/physics_raycast.cpp
