Добавил managed модуль Engine.Net (MVP)
+ Добавлено: новый проект Engine.Net с базовыми сетевыми контрактами (snapshot/entity/component/rpc/channel/config/статистика).
+ Добавлено: DeterministicNetClock и ClientInterpolationBuffer для tick-based и клиентской интерполяции.
+ Добавлено: InMemoryNetSession с server-authoritative репликацией, ownership-проверками, whitelist компонентов и лимитами payload/rpc-per-tick.
+ Добавлено: тесты Net/InMemoryNetSessionTests на детерминизм, spawn/replication, ownership, лимиты, routing RPC и сетевую статистику.
+ Обновлено: Engine.Tests.csproj и Engine.sln для подключения нового модуля.
+ Проверено: dotnet test engine/managed/tests/Engine.Tests/Engine.Tests.csproj (194 passed).

--- a/engine/managed/tests/Engine.Tests/Engine.Tests.csproj
+++ b/engine/managed/tests/Engine.Tests/Engine.Tests.csproj
@@ -29,6 +29,7 @@
     <ProjectReference Include="..\..\src\Engine.App\Engine.App.csproj" />
     <ProjectReference Include="..\..\src\Engine.Scenes\Engine.Scenes.csproj" />
     <ProjectReference Include="..\..\src\Engine.NativeBindings\Engine.NativeBindings.csproj" />
+    <ProjectReference Include="..\..\src\Engine.Net\Engine.Net.csproj" />
   </ItemGroup>
 
 </Project>
