--- a/engine/managed/tests/Engine.Tests/Engine.Tests.csproj
+++ b/engine/managed/tests/Engine.Tests/Engine.Tests.csproj
@@ -30,6 +30,7 @@
     <ProjectReference Include="..\..\src\Engine.Scenes\Engine.Scenes.csproj" />
     <ProjectReference Include="..\..\src\Engine.NativeBindings\Engine.NativeBindings.csproj" />
     <ProjectReference Include="..\..\src\Engine.Net\Engine.Net.csproj" />
+    <ProjectReference Include="..\..\src\Engine.Audio\Engine.Audio.csproj" />
   </ItemGroup>
 
 </Project>
