Добавил managed модуль Engine.Procedural (MVP)
+ Добавлено: новый проект Engine.Procedural с базовыми типами mesh/texture/material/level/animation.
+ Добавлено: MeshBuilder (submesh, авто-bounds, UV projection planar/box/cylindrical, генерация упрощённого LOD).
+ Добавлено: TextureBuilder (Perlin/Simplex/Worley + pattern grid/brick/stripes, height->normal map, deterministic seed).
+ Добавлено: MaterialTemplates (DffLitPbr, DffUnlit, DffDecal, DffUi) и parameter/texture bindings.
+ Добавлено: LevelGenerator (модульный граф узлов, mesh chunks, spawn points, вариативность по seed/density/danger).
+ Добавлено: ProceduralAnimation (tween curves, look-at/aim constraints).
+ Добавлено: тесты ProceduralModuleTests на детерминизм и edge-кейсы procedural систем.
+ Обновлено: Engine.Tests.csproj и Engine.sln для подключения нового модуля.
+ Проверено: dotnet test engine/managed/tests/Engine.Tests/Engine.Tests.csproj (211 passed).

--- a/engine/managed/tests/Engine.Tests/Engine.Tests.csproj
+++ b/engine/managed/tests/Engine.Tests/Engine.Tests.csproj
@@ -31,6 +31,7 @@
     <ProjectReference Include="..\..\src\Engine.NativeBindings\Engine.NativeBindings.csproj" />
     <ProjectReference Include="..\..\src\Engine.Net\Engine.Net.csproj" />
     <ProjectReference Include="..\..\src\Engine.Audio\Engine.Audio.csproj" />
+    <ProjectReference Include="..\..\src\Engine.Procedural\Engine.Procedural.csproj" />
   </ItemGroup>
 
 </Project>
