--- a/engine/managed/src/Engine.Procedural/Engine.Procedural.csproj
+++ b/engine/managed/src/Engine.Procedural/Engine.Procedural.csproj
@@ -1,5 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
+  <ItemGroup>
+    <ProjectReference Include="..\Engine.Rendering\Engine.Rendering.csproj" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
