Добавлен runtime-репликатор procedural чанков из net snapshot
+ Добавлен NetProceduralChunkReplicator для применения net snapshot в procedural рендер-пайплайн.
+ Реализованы dedupe и ref-count кэш ресурсов по AssetKey, spawn/update/despawn и корректный release handle-ов.
+ Добавлена валидация recipe параметров meshTag/nodeId/surfaceWidth/surfaceHeight и конфликтов metadata при одинаковом AssetKey.
+ Добавлены тесты NetProceduralChunkReplicatorTests для shared cache, update, despawn, invalid inputs и Dispose lifecycle.
+ Подключена зависимость Engine.Procedural -> Engine.Net для работы с NetSnapshot/NetProceduralRecipeRef.

--- a/engine/managed/src/Engine.Procedural/Engine.Procedural.csproj
+++ b/engine/managed/src/Engine.Procedural/Engine.Procedural.csproj
@@ -1,6 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
+    <ProjectReference Include="..\Engine.Net\Engine.Net.csproj" />
     <ProjectReference Include="..\Engine.Rendering\Engine.Rendering.csproj" />
   </ItemGroup>
 
