Добавлен multiplayer-demo артефакт для dff test
+ Добавлен MultiplayerDemoArtifactGenerator: симуляция authoritative server + 2 clients с procedural уровнем по seed.
+ Добавлена проверка синхронизации клиентских snapshot через NetProceduralChunkReplicator и запись net-профиля (RTT/loss/bytes/messages).
+ Встроен новый артефакт
et/multiplayer-demo.json в TestArtifactGenerator и manifest (kind: multiplayer-demo).
+ Обновлены тесты EngineCliTestCaptureOptionsTests: проверка структуры multiplayer артефакта и наличия записи в manifest.
+ Добавлена явная ссылка engine-cli на Engine.Net для прямого использования net API в tooling.

--- a/engine/tools/engine-cli/Engine.Cli.csproj
+++ b/engine/tools/engine-cli/Engine.Cli.csproj
@@ -2,6 +2,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\asset-pipeline\Engine.AssetPipeline.csproj" />
+    <ProjectReference Include="..\..\managed\src\Engine.Net\Engine.Net.csproj" />
     <ProjectReference Include="..\..\managed\src\Engine.Procedural\Engine.Procedural.csproj" />
     <ProjectReference Include="..\..\managed\src\Engine.Testing\Engine.Testing.csproj" />
     <ProjectReference Include="..\..\managed\src\Engine.Rendering\Engine.Rendering.csproj" />
