--- a/engine/native/CMakeLists.txt
+++ b/engine/native/CMakeLists.txt
@@ -4,6 +4,7 @@ project(dff_native LANGUAGES C CXX)
 
 add_library(dff_native SHARED
   src/bridge_capi/engine_capi.cpp
+  src/bridge_capi/net_capi.cpp
   src/bridge_capi/content_capi.cpp
   src/bridge_capi/renderer_capi.cpp
   src/bridge_capi/physics_capi.cpp
@@ -14,6 +15,7 @@ add_library(dff_native SHARED
   src/core/audio_state.cpp
   src/core/capture_store.cpp
   src/core/engine_state.cpp
+  src/core/net_state.cpp
   src/core/physics_raycast.cpp
   src/core/physics_queries.cpp
   src/platform/platform_state.cpp
@@ -101,4 +103,20 @@ if(BUILD_TESTING)
   target_link_libraries(dff_native_audio_tests PRIVATE dff_native)
 
   add_test(NAME dff_native_audio_tests COMMAND dff_native_audio_tests)
+
+  add_executable(dff_native_net_tests
+    tests/net/net_capi_tests.cpp
+  )
+
+  target_compile_features(dff_native_net_tests PRIVATE cxx_std_20)
+
+  target_include_directories(dff_native_net_tests PRIVATE
+    ${CMAKE_CURRENT_SOURCE_DIR}/include
+    ${CMAKE_CURRENT_SOURCE_DIR}/src
+    ${CMAKE_CURRENT_SOURCE_DIR}/tests
+  )
+
+  target_link_libraries(dff_native_net_tests PRIVATE dff_native)
+
+  add_test(NAME dff_native_net_tests COMMAND dff_native_net_tests)
 endif()
