Добавлены типизированные blob-форматы контента
+ Добавлено: Mesh/Texture/Material/Sound blob codec в Engine.Content с валидацией и round-trip чтением/записью.
+ Добавлено: ProceduralSoundBlobBuilder для генерации SoundBlob из procedural audio.
+ Улучшено: ProceduralChunkRenderUploader переведен на новые codecs для mesh/texture/material blob.
+ Улучшено: asset-pipeline переведен на codec-форматы; добавлена компиляция kind=material и kind=sound.
+ Улучшено: CompiledAssetFormat синхронизирован с новыми magic/version константами.
+ Добавлено: тесты Engine.Tests для всех новых codecs и sound blob builder.
+ Добавлено: обновленные тесты procedural uploader с декодированием blob-ов.
+ Добавлено: тесты assetc на новые форматы texture/mesh/material/sound.
+ Исправлено: удалены лишние untracked артефакты (node_modules, package.json, bun.lock) из рабочей директории.

--- a/engine/tools/asset-pipeline/Engine.AssetPipeline.csproj
+++ b/engine/tools/asset-pipeline/Engine.AssetPipeline.csproj
@@ -1,6 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
+    <ProjectReference Include="..\..\managed\src\Engine.Content\Engine.Content.csproj" />
     <ProjectReference Include="..\..\managed\src\Engine.Scenes\Engine.Scenes.csproj" />
   </ItemGroup>
 
