--- a/engine/managed/src/Engine.NativeBindings/Engine.NativeBindings.csproj
+++ b/engine/managed/src/Engine.NativeBindings/Engine.NativeBindings.csproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
+    <ProjectReference Include="..\Engine.Audio\Engine.Audio.csproj" />
     <ProjectReference Include="..\Engine.Core\Engine.Core.csproj" />
     <ProjectReference Include="..\Engine.ECS\Engine.ECS.csproj" />
     <ProjectReference Include="..\Engine.Physics\Engine.Physics.csproj" />
