--- a/templates/game-template/src/Game.Runtime/Game.Runtime.csproj
+++ b/templates/game-template/src/Game.Runtime/Game.Runtime.csproj
@@ -1,4 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
+  <ItemGroup>
+    <ProjectReference Include="__ENGINE_MANAGED_SRC_RELATIVE__/Engine.Audio/Engine.Audio.csproj" />
+    <ProjectReference Include="__ENGINE_MANAGED_SRC_RELATIVE__/Engine.Core/Engine.Core.csproj" />
+    <ProjectReference Include="__ENGINE_MANAGED_SRC_RELATIVE__/Engine.Net/Engine.Net.csproj" />
+    <ProjectReference Include="__ENGINE_MANAGED_SRC_RELATIVE__/Engine.Procedural/Engine.Procedural.csproj" />
+    <ProjectReference Include="__ENGINE_MANAGED_SRC_RELATIVE__/Engine.Rendering/Engine.Rendering.csproj" />
+    <ProjectReference Include="__ENGINE_MANAGED_SRC_RELATIVE__/Engine.UI/Engine.UI.csproj" />
+  </ItemGroup>
+
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net9.0</TargetFramework>
