Добавлен интеграционный тест persistence pipeline cache
+ Добавлен отдельный модуль native-тестов engine_pipeline_cache_persistence_tests.
+ Реализована проверка сохранения cache при engine_destroy и загрузки при следующем engine_create через DFF_PIPELINE_CACHE_PATH.
+ Добавлены проверки cache hit/miss после перезапуска движка на одинаковом draw packet.
+ Подключен новый тестовый модуль в CMake и в запуск dff_native_tests.

--- a/engine/native/CMakeLists.txt
+++ b/engine/native/CMakeLists.txt
@@ -46,6 +46,7 @@ if(BUILD_TESTING)
   add_executable(dff_native_tests
     tests/native_tests.cpp
     tests/content/content_runtime_tests.cpp
+    tests/core/engine_pipeline_cache_persistence_tests.cpp
     tests/platform/platform_state_tests.cpp
     tests/render/frame_graph_builder_tests.cpp
     tests/render/material_system_tests.cpp
