Добавлен bootstrap pak-only контента для runtime
+ Добавлен PackagedRuntimeContentBootstrap для чтения config/runtime.json, проверки contentMode/contentPak, монтирования Game.pak и включения Assets в режиме PakOnly
+ Добавлены unit-тесты PackagedRuntimeContentBootstrapTests с проверками валидного пути, ошибок конфигурации, отсутствующих файлов и поврежденного JSON
+ Обновлен шаблон Game.Runtime: добавлены ссылки на Engine.Content и Engine.NativeBindings, внедрен вызов TryConfigurePackagedContent при наличии runtime-конфига, расширены проверки EngineCliTemplateRuntimeTests

--- a/templates/game-template/src/Game.Runtime/Game.Runtime.csproj
+++ b/templates/game-template/src/Game.Runtime/Game.Runtime.csproj
@@ -1,7 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <ItemGroup>
     <ProjectReference Include="__ENGINE_MANAGED_SRC_RELATIVE__/Engine.Audio/Engine.Audio.csproj" />
+    <ProjectReference Include="__ENGINE_MANAGED_SRC_RELATIVE__/Engine.Content/Engine.Content.csproj" />
     <ProjectReference Include="__ENGINE_MANAGED_SRC_RELATIVE__/Engine.Core/Engine.Core.csproj" />
+    <ProjectReference Include="__ENGINE_MANAGED_SRC_RELATIVE__/Engine.NativeBindings/Engine.NativeBindings.csproj" />
     <ProjectReference Include="__ENGINE_MANAGED_SRC_RELATIVE__/Engine.Net/Engine.Net.csproj" />
     <ProjectReference Include="__ENGINE_MANAGED_SRC_RELATIVE__/Engine.Procedural/Engine.Procedural.csproj" />
     <ProjectReference Include="__ENGINE_MANAGED_SRC_RELATIVE__/Engine.Rendering/Engine.Rendering.csproj" />
