Добавлен Linux RPATH  для dff_native
+ Для dff_native на Linux добавлены BUILD_RPATH и INSTALL_RPATH со значением
+ Это улучшает portable запуск linux-x64 пакета без внешней настройки путей библиотек
+ Проверены конфигурация/сборка native, ctest и полный managed/CLI тест-прогон

--- a/engine/native/CMakeLists.txt
+++ b/engine/native/CMakeLists.txt
@@ -45,6 +45,12 @@ if(MSVC)
     MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
 endif()
 
+if(UNIX AND NOT APPLE)
+  set_target_properties(dff_native PROPERTIES
+    BUILD_RPATH "$ORIGIN"
+    INSTALL_RPATH "$ORIGIN")
+endif()
+
 include(CTest)
 
 if(BUILD_TESTING)
