Добавлен handle-based слой C ABI
+ Добавлены новые handle-типы и функции *_handle в engine_native.h для engine/renderer/physics/audio/net и связанных API.
+ Реализован registry хэндлов с упаковкой index+generation, резолвом, инвалидированием и защитой от stale-handle.
+ Добавлены bridge-реализации handle API, разнесённые по доменам: engine/content, render/capture, audio/net/physics.
+ Улучшена совместимость pointer API: при engine_destroy/net_destroy теперь очищаются связанные handle-регистрации.
+ Добавлен отдельный тест dff_native_handle_tests, проверяющий жизненный цикл хэндлов, standalone net и смену поколения.
+ Обновлена native-сборка CMake: включены новые bridge-файлы и новый тестовый таргет.

--- a/engine/native/CMakeLists.txt
+++ b/engine/native/CMakeLists.txt
@@ -90,6 +90,10 @@ target_link_libraries(dff_core
 )
 
 add_library(dff_bridge_capi OBJECT
+  src/bridge_capi/handle_registry.cpp
+  src/bridge_capi/handle_capi_engine_content.cpp
+  src/bridge_capi/handle_capi_render_capture.cpp
+  src/bridge_capi/handle_capi_audio_net_physics.cpp
   src/bridge_capi/engine_capi.cpp
   src/bridge_capi/net_capi.cpp
   src/bridge_capi/content_capi.cpp
@@ -227,4 +231,25 @@ if(BUILD_TESTING)
   endif()
 
   add_test(NAME dff_native_net_tests COMMAND dff_native_net_tests)
+
+  add_executable(dff_native_handle_tests
+    tests/handle/handle_capi_tests.cpp
+  )
+
+  target_compile_features(dff_native_handle_tests PRIVATE cxx_std_20)
+
+  target_include_directories(dff_native_handle_tests PRIVATE
+    ${CMAKE_CURRENT_SOURCE_DIR}/include
+    ${CMAKE_CURRENT_SOURCE_DIR}/src
+    ${CMAKE_CURRENT_SOURCE_DIR}/tests
+  )
+
+  target_link_libraries(dff_native_handle_tests PRIVATE dff_native)
+
+  if(MSVC)
+    set_target_properties(dff_native_handle_tests PROPERTIES
+      MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
+  endif()
+
+  add_test(NAME dff_native_handle_tests COMMAND dff_native_handle_tests)
 endif()
