--- a/engine/tools/engine-cli/Engine.Cli.csproj
+++ b/engine/tools/engine-cli/Engine.Cli.csproj
@@ -2,6 +2,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\asset-pipeline\Engine.AssetPipeline.csproj" />
+    <ProjectReference Include="..\..\managed\src\Engine.App\Engine.App.csproj" />
     <ProjectReference Include="..\..\managed\src\Engine.NativeBindings\Engine.NativeBindings.csproj" />
     <ProjectReference Include="..\..\managed\src\Engine.Net\Engine.Net.csproj" />
     <ProjectReference Include="..\..\managed\src\Engine.Procedural\Engine.Procedural.csproj" />
